--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 absl-py==1.4.0
+asttokens==2.2.1
 astunparse==1.6.3
+backcall==0.2.0
 blis==0.7.9
 cachetools==5.3.0
 catalogue==2.0.8
@@ -7,8 +9,12 @@ certifi==2022.12.7
 charset-normalizer==3.1.0
 click==8.1.3
 colorama==0.4.6
+comm==0.1.3
 confection==0.0.4
 cymem==2.0.7
+debugpy==1.6.7
+decorator==5.1.1
+executing==1.2.0
 flatbuffers==23.3.3
 gast==0.4.0
 google-auth==2.17.3
@@ -17,30 +23,46 @@ google-pasta==0.2.0
 grpcio==1.54.0
 h5py==3.8.0
 idna==3.4
+ipykernel==6.22.0
+ipython==8.13.2
 jax==0.4.8
+jedi==0.18.2
 Jinja2==3.1.2
 joblib==1.2.0
+jupyter_client==8.2.0
+jupyter_core==5.3.0
 keras==2.12.0
 langcodes==3.3.0
 libclang==16.0.0
 Markdown==3.4.3
 MarkupSafe==2.1.2
+matplotlib-inline==0.1.6
 ml-dtypes==0.1.0
 murmurhash==1.0.9
+nest-asyncio==1.5.6
 nltk==3.8.1
 numpy==1.23.5
 oauthlib==3.2.2
 opt-einsum==3.3.0
 packaging==23.1
 pandas==2.0.1
+parso==0.8.3
 pathy==0.10.1
+pickleshare==0.7.5
+platformdirs==3.5.0
 preshed==3.0.8
+prompt-toolkit==3.0.38
 protobuf==4.22.4
+psutil==5.9.5
+pure-eval==0.2.2
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
 pydantic==1.10.7
+Pygments==2.15.1
 python-dateutil==2.8.2
 pytz==2023.3
+pywin32==306
+pyzmq==25.0.2
 regex==2023.5.5
 requests==2.30.0
 requests-oauthlib==1.3.1
@@ -52,6 +74,7 @@ spacy==3.5.2
 spacy-legacy==3.0.12
 spacy-loggers==1.0.4
 srsly==2.4.6
+stack-data==0.6.2
 tensorboard==2.12.3
 tensorboard-data-server==0.7.0
 tensorflow==2.12.0
@@ -61,11 +84,14 @@ tensorflow-io-gcs-filesystem==0.31.0
 termcolor==2.3.0
 textblob==0.17.1
 thinc==8.1.10
+tornado==6.3.1
 tqdm==4.65.0
+traitlets==5.9.0
 typer==0.7.0
 typing_extensions==4.5.0
 tzdata==2023.3
 urllib3==2.0.2
 wasabi==1.1.1
+wcwidth==0.2.6
 Werkzeug==2.3.3
 wrapt==1.14.1
