--- a/requirements.txt
+++ b/requirements.txt
@@ -8,14 +8,17 @@ catalogue==2.0.8
 certifi==2022.12.7
 charset-normalizer==3.1.0
 click==8.1.3
+cloudpickle==2.2.1
 colorama==0.4.6
 comm==0.1.3
 confection==0.0.4
 cymem==2.0.7
+dask==2023.4.1
 debugpy==1.6.7
 decorator==5.1.1
 executing==1.2.0
 flatbuffers==23.3.3
+fsspec==2023.4.0
 gast==0.4.0
 google-auth==2.17.3
 google-auth-oauthlib==1.0.0
@@ -23,6 +26,7 @@ google-pasta==0.2.0
 grpcio==1.54.0
 h5py==3.8.0
 idna==3.4
+importlib-metadata==6.6.0
 ipykernel==6.22.0
 ipython==8.13.2
 jax==0.4.8
@@ -34,6 +38,7 @@ jupyter_core==5.3.0
 keras==2.12.0
 langcodes==3.3.0
 libclang==16.0.0
+locket==1.0.0
 Markdown==3.4.3
 MarkupSafe==2.1.2
 matplotlib-inline==0.1.6
@@ -47,6 +52,7 @@ opt-einsum==3.3.0
 packaging==23.1
 pandas==2.0.1
 parso==0.8.3
+partd==1.4.0
 pathy==0.10.1
 pickleshare==0.7.5
 platformdirs==3.5.0
@@ -62,6 +68,7 @@ Pygments==2.15.1
 python-dateutil==2.8.2
 pytz==2023.3
 pywin32==306
+PyYAML==6.0
 pyzmq==25.0.2
 regex==2023.5.5
 requests==2.30.0
@@ -84,6 +91,7 @@ tensorflow-io-gcs-filesystem==0.31.0
 termcolor==2.3.0
 textblob==0.17.1
 thinc==8.1.10
+toolz==0.12.0
 tornado==6.3.1
 tqdm==4.65.0
 traitlets==5.9.0
@@ -95,3 +103,4 @@ wasabi==1.1.1
 wcwidth==0.2.6
 Werkzeug==2.3.3
 wrapt==1.14.1
+zipp==3.15.0
