--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 absl-py==1.4.0
+asgiref==3.6.0
 asttokens==2.2.1
 astunparse==1.6.3
 backcall==0.2.0
@@ -16,6 +17,7 @@ cymem==2.0.7
 dask==2023.4.1
 debugpy==1.6.7
 decorator==5.1.1
+Django==4.2.1
 executing==1.2.0
 flatbuffers==23.3.3
 fsspec==2023.4.0
@@ -80,13 +82,12 @@ smart-open==6.3.0
 spacy==3.5.2
 spacy-legacy==3.0.12
 spacy-loggers==1.0.4
+sqlparse==0.4.4
 srsly==2.4.6
 stack-data==0.6.2
 tensorboard==2.12.3
 tensorboard-data-server==0.7.0
-tensorflow==2.12.0
 tensorflow-estimator==2.12.0
-tensorflow-intel==2.12.0
 tensorflow-io-gcs-filesystem==0.31.0
 termcolor==2.3.0
 textblob==0.17.1
