ya parsea frfr lol

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,9 @@ asgiref==3.6.0
 asttokens==2.2.1
 astunparse==1.6.3
 backcall==0.2.0
+bleach==6.0.0
 blis==0.7.9
+bokeh==2.4.3
 cachetools==5.3.0
 catalogue==2.0.8
 certifi==2022.12.7
@@ -11,8 +13,11 @@ charset-normalizer==3.1.0
 click==8.1.3
 cloudpickle==2.2.1
 colorama==0.4.6
+colorcet==3.0.1
 comm==0.1.3
 confection==0.0.4
+contourpy==1.0.7
+cycler==0.11.0
 cymem==2.0.7
 dask==2023.4.1
 debugpy==1.6.7
@@ -20,6 +25,7 @@ decorator==5.1.1
 Django==4.2.1
 executing==1.2.0
 flatbuffers==23.3.3
+fonttools==4.39.3
 fsspec==2023.4.0
 gast==0.4.0
 google-auth==2.17.3
@@ -27,6 +33,8 @@ google-auth-oauthlib==1.0.0
 google-pasta==0.2.0
 grpcio==1.54.0
 h5py==3.8.0
+holoviews==1.15.4
+hvplot==0.8.3
 idna==3.4
 importlib-metadata==6.6.0
 ipykernel==6.22.0
@@ -38,11 +46,13 @@ joblib==1.2.0
 jupyter_client==8.2.0
 jupyter_core==5.3.0
 keras==2.12.0
+kiwisolver==1.4.4
 langcodes==3.3.0
 libclang==16.0.0
 locket==1.0.0
 Markdown==3.4.3
 MarkupSafe==2.1.2
+matplotlib==3.7.1
 matplotlib-inline==0.1.6
 ml-dtypes==0.1.0
 murmurhash==1.0.9
@@ -53,10 +63,13 @@ oauthlib==3.2.2
 opt-einsum==3.3.0
 packaging==23.1
 pandas==2.0.1
+panel==0.14.4
+param==1.13.0
 parso==0.8.3
 partd==1.4.0
 pathy==0.10.1
 pickleshare==0.7.5
+Pillow==9.5.0
 platformdirs==3.5.0
 preshed==3.0.8
 prompt-toolkit==3.0.38
@@ -65,10 +78,13 @@ psutil==5.9.5
 pure-eval==0.2.2
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
+pyct==0.5.0
 pydantic==1.10.7
 Pygments==2.15.1
+pyparsing==3.0.9
 python-dateutil==2.8.2
 pytz==2023.3
+pyviz-comms==2.2.1
 pywin32==306
 PyYAML==6.0
 pyzmq==25.0.2
@@ -87,7 +103,9 @@ srsly==2.4.6
 stack-data==0.6.2
 tensorboard==2.12.3
 tensorboard-data-server==0.7.0
+tensorflow==2.12.0
 tensorflow-estimator==2.12.0
+tensorflow-intel==2.12.0
 tensorflow-io-gcs-filesystem==0.31.0
 termcolor==2.3.0
 textblob==0.17.1
@@ -102,6 +120,7 @@ tzdata==2023.3
 urllib3==2.0.2
 wasabi==1.1.1
 wcwidth==0.2.6
+webencodings==0.5.1
 Werkzeug==2.3.3
 wrapt==1.14.1
 zipp==3.15.0
